--- a/Chatbot/data/rules.yml
+++ b/Chatbot/data/rules.yml
@@ -21,3 +21,8 @@ rules:
   steps:
   - intent: birthdayQuestion
   - action: action_evaluate_birthday
+
+- rule: Ask the user to rephrase whenever they send a message with low NLU confidence
+  steps:
+  - intent: nlu_fallback
+  - action: utter_default
