--- a/Chatbot/data/stories.yml
+++ b/Chatbot/data/stories.yml
@@ -11,3 +11,35 @@ stories:
   steps:
   - intent: birthdayQuestion
   - action: action_evaluate_birthday
+
+- story: nlu_fallback with follow up corrected question
+  steps:
+  - intent: nlu_fallback 
+  - action: utter_default
+  - intent: birthdayQuestion
+  - action: action_evaluate_birthday
+
+- story: Fallback_story
+  steps:
+  - intent: nlu_fallback
+  - action: utter_default
+
+- story: full exhange
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: nlu_fallback 
+  - action: utter_default
+  - intent: birthdayQuestion
+  - action: action_evaluate_birthday
+
+- story: long exhange
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: birthdayQuestion
+  - action: action_evaluate_birthday
+  - intent: nlu_fallback 
+  - action: utter_default
+  - intent: birthdayQuestion
+  - action: action_evaluate_birthday
